tests/machine/x/go/left_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/left_join.go:13:17: undefined: Customer
../../../tests/machine/x/go/left_join.go:16:5: undefined: Customer
../../../tests/machine/x/go/left_join.go:20:14: undefined: Order
../../../tests/machine/x/go/left_join.go:24:5: undefined: Order
../../../tests/machine/x/go/left_join.go:29:21: undefined: Result
../../../tests/machine/x/go/left_join.go:30:31: undefined: Customer
../../../tests/machine/x/go/left_join.go:34:16: undefined: Result
../../../tests/machine/x/go/left_join.go:36:9: undefined: Result

1: //go:build ignore
