tests/machine/x/go/left_join.go
//go:build ignore

// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:10:45Z
// Source: ../../../tests/vm/valid/left_join.mochi

package main

import (
	"fmt"
)

func main() {
	customers := []Customer{Customer{
		Id:   1,
		Name: "Alice",
	}, Customer{
		Id:   2,
		Name: "Bob",
	}}
	orders := []Order{Order{
		Id:         100,
		CustomerId: 1,
		Total:      250,
	}, Order{
		Id:         101,
		CustomerId: 3,
		Total:      80,
	}}
	result := func() []Result {
		customerMap := make(map[int]Customer)
		for _, c := range customers {
			customerMap[c.Id] = c
		}
		var result []Result
		for _, o := range orders {
			r := Result{OrderID: o.Id, Total: o.Total}
			if v, ok := customerMap[o.CustomerId]; ok {
				r.Customer = &v
			} else {
				r.Customer = nil
			}
			result = append(result, r)
		}
		return result
	}()
	fmt.Println("--- Left Join ---")
	for _, entry := range result {
		fmt.Println("Order", entry.OrderId, "customer", entry.Customer, "total", entry.Total)
	}
}
